[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/arcade_normal_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/ArcadeNormal-ZDZ.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SettingsPopupDialog.gd" type="Script" id=3]
[ext_resource path="res://sound/ButtonHover.tres" type="AudioStream" id=4]
[ext_resource path="res://sound/MenuSelect.tres" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[node name="SettingsPopupDialog" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -23.0
margin_right = 10.0
margin_bottom = 23.0
popup_exclusive = true
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -36.0
margin_right = 140.0
margin_bottom = 36.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 280.0
margin_bottom = 72.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 280.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonOverPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="ButtonClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
